  * bugfix: override any ambient $SIG{__DIE__} handler when using eval { }

  * bugfix: require bugfixed version of DateTime::TimeZone::SystemV
    (for $SIG{__DIE__} handling)

  * build with Module::Build instead of ExtUtils::MakeMaker

  * complete dependency list

  * include signature in distribution

version 0.000; 2007-02-10

  * initial released version