@@ -6,6 +6,7 @@ META.yml
 Makefile.PL
 README
 lib/DateTime/TimeZone/Tzfile.pm
+t/construct.t
 t/ident.t
 t/local.t
 t/london.tz
