@@ -1,3 +1,1 @@
-* option to give separate name
-
 * option to use an open filehandle
