@@ -6,6 +6,9 @@ DateTime::TimeZone::Tzfile - tzfile (zoneinfo) timezone files
 
 	use DateTime::TimeZone::Tzfile;
 
+	$tz = DateTime::TimeZone::Tzfile->new(
+		name => "local timezone",
+		filename => "/etc/localtime");
 	$tz = DateTime::TimeZone::Tzfile->new("/etc/localtime");
 
 	if($tz->is_floating) { ...
@@ -66,12 +69,33 @@ sub fmod($$) { $_[0] % $_[1] }
 
 =over
 
+=item DateTime::TimeZone::Tzfile->new(ATTR => VALUE, ...)
+
+Reads and parses a L<tzfile(5)> format file, then constructs and returns
+a L<DateTime>-compatible timezone object that implements the timezone
+encoded in the file.  The following attributes may be given:
+
+=over
+
+=item B<name>
+
+Name for the timezone object.  This will be returned by the C<name>
+method described below.
+
+=item B<filename>
+
+Name of the file from which to read the timezone data.  The filename
+must be understood by L<IO::File>.
+
+=back
+
+The filename must be given.  If a timezone name is not given, then the
+filename is used instead.
+
 =item DateTime::TimeZone::Tzfile->new(FILENAME)
 
-I<FILENAME> must be a filename that can be interpreted by L<IO::File>,
-and the file to which it refers must be in L<tzfile(5)> format.  Reads and
-parses the file, then constructs and returns a L<DateTime>-compatible
-timezone object that implements the timezone encoded in the file.
+Simpler way to invoke the above constructor in the usual case.  Only the
+filename is given; this will also be used as the timezone name.
 
 =cut
 
@@ -118,7 +142,27 @@ sub _read_tm64($) {
 }
 
 sub new($$) {
-	my($class, $filename) = @_;
+	my $class = shift;
+	unshift @_, "filename" if @_ == 1;
+	my DateTime::TimeZone::Tzfile $self = fields::new($class);
+	my $filename;
+	while(@_) {
+		my $attr = shift;
+		my $value = shift;
+		if($attr eq "name") {
+			croak "timezone name specified redundantly"
+				if exists $self->{name};
+			$self->{name} = $value;
+		} elsif($attr eq "filename") {
+			croak "filename specified redundantly"
+				if defined $filename;
+			$filename = $value;
+		} else {
+			croak "unrecognised attribute `$attr'";
+		}
+	}
+	croak "filename not specified" unless defined $filename;
+	$self->{name} = $filename unless exists $self->{name};
 	my $fh = IO::File->new($filename, "r")
 		or croak "can't read $filename: $!";
 	croak "bad tzfile: wrong magic number"
@@ -172,7 +216,6 @@ sub new($$) {
 	}
 	my $first_std_type_index;
 	my %offsets;
-	my $has_dst;
 	for(my $i = 0; $i != $typecnt; $i++) {
 		my $abbrind = $types[$i]->[2];
 		croak "bad tzfile: invalid abbreviation index"
@@ -182,7 +225,7 @@ sub new($$) {
 		$types[$i]->[2] = $1;
 		$first_std_type_index = $i
 			if !defined($first_std_type_index) && !$types[$i]->[1];
-		$has_dst = 1 if $types[$i]->[1];
+		$self->{has_dst} = 1 if $types[$i]->[1];
 		if($types[$i]->[2] eq "zzz") {
 			# "zzz" means the zone is not defined at this time,
 			# due for example to the location being uninhabited
@@ -203,9 +246,6 @@ sub new($$) {
 		DateTime::TimeZone::SystemV->VERSION("0.002");
 		DateTime::TimeZone::SystemV->new($late_rule);
 	};
-	my DateTime::TimeZone::SystemV $self = fields::new($class);
-	$self->{name} = $filename;
-	$self->{has_dst} = $has_dst;
 	$self->{trn_times} = \@trn_times;
 	$self->{obs_types} = \@obs_types;
 	$self->{offsets} = [ sort { $a <=> $b } keys %offsets ];
@@ -262,12 +302,14 @@ sub category($) { undef }
 
 =item $tz->name
 
-Returns the I<FILENAME> that was supplied to the constructor.
+Returns the timezone name.  Usually this is the filename that was supplied
+to the constructor, but it can be overridden by the constructor's B<name>
+attribute.
 
 =cut
 
 sub name($) {
-	my DateTime::TimeZone::SystemV $self = shift;
+	my DateTime::TimeZone::Tzfile $self = shift;
 	return $self->{name};
 }
 
@@ -286,7 +328,7 @@ affect any of the zone's behaviour.
 =cut
 
 sub has_dst_changes($) {
-	my DateTime::TimeZone::SystemV $self = shift;
+	my DateTime::TimeZone::Tzfile $self = shift;
 	return $self->{has_dst};
 }
 
@@ -295,7 +337,7 @@ sub has_dst_changes($) {
 #
 
 sub _type_for_rdn_sod($$$) {
-	my DateTime::TimeZone::SystemV $self = shift;
+	my DateTime::TimeZone::Tzfile $self = shift;
 	my($utc_rdn, $utc_sod) = @_;
 	my $lo = 0;
 	my $hi = @{$self->{trn_times}};
@@ -314,7 +356,7 @@ sub _type_for_rdn_sod($$$) {
 }
 
 sub _type_for_datetime($$) {
-	my DateTime::TimeZone::SystemV $self = shift;
+	my DateTime::TimeZone::Tzfile $self = shift;
 	my($dt) = @_;
 	my($utc_rdn, $utc_sod) = $dt->utc_rd_values;
 	$utc_sod = 86399 if $utc_sod >= 86400;
@@ -330,7 +372,7 @@ is in effect at the instant represented by I<DT>, in seconds.
 =cut
 
 sub offset_for_datetime($$) {
-	my DateTime::TimeZone::SystemV $self = shift;
+	my DateTime::TimeZone::Tzfile $self = shift;
 	my($dt) = @_;
 	my $type = $self->_type_for_datetime($dt);
 	return ref($type) eq "ARRAY" ? $type->[0] :
@@ -348,7 +390,7 @@ affect anything else.
 =cut
 
 sub is_dst_for_datetime($$) {
-	my DateTime::TimeZone::SystemV $self = shift;
+	my DateTime::TimeZone::Tzfile $self = shift;
 	my($dt) = @_;
 	my $type = $self->_type_for_datetime($dt);
 	return ref($type) eq "ARRAY" ? $type->[1] :
@@ -366,7 +408,7 @@ either the timezone or the offset.
 =cut
 
 sub short_name_for_datetime($$) {
-	my DateTime::TimeZone::SystemV $self = shift;
+	my DateTime::TimeZone::Tzfile $self = shift;
 	my($dt) = @_;
 	my $type = $self->_type_for_datetime($dt);
 	return ref($type) eq "ARRAY" ? $type->[2] :
@@ -405,7 +447,7 @@ sub _local_to_utc_rdn_sod($$$) {
 }
 
 sub offset_for_local_datetime($$) {
-	my DateTime::TimeZone::SystemV $self = shift;
+	my DateTime::TimeZone::Tzfile $self = shift;
 	my($dt) = @_;
 	my($lcl_rdn, $lcl_sod) = $dt->local_rd_values;
 	$lcl_sod = 86399 if $lcl_sod >= 86400;
